Improve visibility of input box. Added new word array for speed mode. Fixed background.

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ background-color: grey;
 }
 
 #inputbox{
-	background-color: rgba(255, 255, 255, 0.3);
+	background-color: rgba(255, 255, 255, 0.7);
 	text-align: center;
 	font-size: 20px;
 }
